update pdf section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <div id="topnav">
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
-        <!-- <li><a href="pages/video.html">Video</a></li>  
-        <li><a href="pages/pdf.html">PDF</a></li> -->
+        <!-- <li><a href="pages/video.html">Video</a></li>   -->
+        <li><a href="pages/pdf.html">PDF</a></li>
         <li><a href="#">Video</a></li>
-        <li><a href="#">PDF</a></li>
       </ul>
     </div>
     <br class="clear" />
