update pdf section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
         <!-- <li><a href="pages/video.html">Video</a></li>   -->
-        <li><a href="https://pankajjoshi1005.github.io/pages/pdf.html">PDF</a></li>
+        <li><a href="pages/pdf.html">PDF</a></li>
         <li><a href="#">Video</a></li>
       </ul>
     </div>
