--- a/pages/pdf.html
+++ b/pages/pdf.html
@@ -28,8 +28,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <br class="clear" />
   </div>
   <!-- <h1>1.<a href="/images/demo/kp.pdf">Memory</a>.</h1> -->
-  <h2>1.<a href="/images/demo/kalpana 12.pdf">Pagal</a>.</h2>
-  <h2>2.<a href="/images/demo/Kalpana.pdf">Tum</a>.</h2>
+  <h2>1.<a href="https://pankajjoshi1005.github.io/images/demo/kalpana 12.pdf">Pagal</a>.</h2>
+  <h2>2.<a href="https://pankajjoshi1005.github.io/images/demo/Kalpana.pdf">Tum</a>.</h2>
 </div>
 </body>
 </html>
