update page link

--- a/pages/pdf.html
+++ b/pages/pdf.html
@@ -30,6 +30,8 @@ Licence URI: http://www.os-templates.com/template-terms
   <!-- <h1>1.<a href="/images/demo/kp.pdf">Memory</a>.</h1> -->
   <h2>1.<a href="https://pankajjoshi1005.github.io/images/demo/kalpana 12.pdf">Pagal</a>.</h2>
   <h2>2.<a href="https://pankajjoshi1005.github.io/images/demo/Kalpana.pdf">Tum</a>.</h2>
+
+  <iframe src="https://drive.google.com/drive/folders/1X-4pEFIiC-in68P8c_PIOS5bwz-_3T7s" width="640" height="480"></iframe>
 </div>
 </body>
 </html>
