--- a/pages/video.html
+++ b/pages/video.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!--
-Template Name: Darkness
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Darkness | Style Demo</title>
+<title>happy birthday</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css" />
 </head>
@@ -16,12 +9,12 @@ Licence URI: http://www.os-templates.com/template-terms
   <div class="wrapper">
     <div id="header">
       <div id="logo">
-        <h1><a href="index.html" style="font: 25px important;">Happy birthday</a></h1>
+        <h1><a href="https://pankajjoshi1005.github.io/bdaykalpi/#" style="font: 25px important;">Happy birthday</a></h1>
         <h1>Kalpi</h1> 
       </div>
       <div id="topnav">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi/">Home</a></li>
           <li><a href="pages/pdf.html">PDF</a></li>
         </ul>
       </div>
