update links and add pdf

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="topnav">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi">Home</a></li>
         <li><a href="pages/video.html">Video</a></li>  
         <li><a href="pages/pdf.html">PDF</a></li>
       </ul>
