--- a/pages/pdf.html
+++ b/pages/pdf.html
@@ -21,17 +21,18 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
     <div id="topnav">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="#">Video</a></li>
+        <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi">Home</a></li>
+        <li><a href="pages/video.html">Video</a></li>  
+        <li><a href="pages/pdf.html">PDF</a></li>
       </ul>
     </div>
     <br class="clear" />
   </div>
-  <!-- <h1>1.<a href="/images/demo/kp.pdf">Memory</a>.</h1> -->
-  <h2>1.<a href="https://pankajjoshi1005.github.io/images/demo/kalpana 12.pdf">Pagal</a>.</h2>
-  <h2>2.<a href="https://pankajjoshi1005.github.io/images/demo/Kalpana.pdf">Tum</a>.</h2>
-
-  <iframe src="https://drive.google.com/drive/folders/1X-4pEFIiC-in68P8c_PIOS5bwz-_3T7s" width="640" height="480"></iframe>
+  <div>
+    <span style="padding-right:40px;">
+  <a></a><iframe src="https://drive.google.com/file/d/1gOpyhMsn8DT_eWvz2HkDjUBu9dICg6l2/preview" width="100%" height="480" allow="autoplay"></iframe>
+  <iframe src="https://drive.google.com/file/d/18MD3h326-xrLEFVLC2e6dpEiTAreXYlY/preview" width="100%" height="480" allow="autoplay"></iframe>
+  <!-- <iframe src="https://drive.google.com/file/d/1tYKBl22dVtANu9_Q-g64d1ioneY5JB4U/preview" width="48.2%" height="480" allow="autoplay"></iframe> -->
 </div>
 </body>
 </html>
