--- a/pages/video.html
+++ b/pages/video.html
@@ -9,12 +9,13 @@
   <div class="wrapper">
     <div id="header">
       <div id="logo">
-        <h1><a href="https://pankajjoshi1005.github.io/bdaykalpi/#" style="font: 25px important;">Happy birthday</a></h1>
+        <h1><a href="https://pankajjoshi1005.github.io/bdaykalpi/" style="font: 25px important;">Happy birthday</a></h1>
         <h1>Kalpi</h1> 
       </div>
       <div id="topnav">
         <ul>
-          <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi/">Home</a></li>
+          <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi">Home</a></li>
+          <li><a href="pages/video.html">Video</a></li>  
           <li><a href="pages/pdf.html">PDF</a></li>
         </ul>
       </div>
