update links and add pdf

--- a/pages/pdf.html
+++ b/pages/pdf.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Darkness | Full Width</title>
+<title>Happy birhday kalpi</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="../layout/styles/layout.css" type="text/css" />
 </head>
@@ -22,8 +22,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi">Home</a></li>
-        <li><a href="pages/video.html">Video</a></li>  
-        <li><a href="pages/pdf.html">PDF</a></li>
+        <li><a href="/video.html">Video</a></li>  
+        <li><a href="/pdf.html">PDF</a></li>
       </ul>
     </div>
     <br class="clear" />
