update size of pdfs

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="topnav">
       <ul>
         <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi">Home</a></li>
-        <li><a href="pages/video.html">Video</a></li>  
-        <li><a href="pages/pdf.html">PDF</a></li>
+        <li><a href="https://pankajjoshi1005.github.io/bdaykalpi/pages/video.html">Video</a></li>  
+        <li><a href="https://pankajjoshi1005.github.io/bdaykalpi/pages/pdf.html">PDF</a></li>
       </ul>
     </div>
     <br class="clear" />
