--- a/pages/pdf.html
+++ b/pages/pdf.html
@@ -22,16 +22,16 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="topnav">
       <ul>
         <li class="active"><a href="https://pankajjoshi1005.github.io/bdaykalpi">Home</a></li>
-        <li><a href="/video.html">Video</a></li>  
-        <li><a href="/pdf.html">PDF</a></li>
+        <li><a href="https://pankajjoshi1005.github.io/bdaykalpi/pages/video.html">Video</a></li>  
+        <li><a href="https://pankajjoshi1005.github.io/bdaykalpi/pages/pdf.html">PDF</a></li>
       </ul>
     </div>
     <br class="clear" />
   </div>
   <div>
-    <span style="padding-right:40px;">
-  <a></a><iframe src="https://drive.google.com/file/d/1gOpyhMsn8DT_eWvz2HkDjUBu9dICg6l2/preview" width="100%" height="480" allow="autoplay"></iframe>
-  <iframe src="https://drive.google.com/file/d/18MD3h326-xrLEFVLC2e6dpEiTAreXYlY/preview" width="100%" height="480" allow="autoplay"></iframe>
+    <span style="padding-top:20px;">
+  <iframe src="https://drive.google.com/file/d/1gOpyhMsn8DT_eWvz2HkDjUBu9dICg6l2/preview" width="100%" height="810px" allow="autoplay"></iframe> <br><br>
+  <iframe src="https://drive.google.com/file/d/18MD3h326-xrLEFVLC2e6dpEiTAreXYlY/preview" width="100%" height="810px" allow="autoplay"></iframe>
   <!-- <iframe src="https://drive.google.com/file/d/1tYKBl22dVtANu9_Q-g64d1ioneY5JB4U/preview" width="48.2%" height="480" allow="autoplay"></iframe> -->
 </div>
 </body>
