add marquee in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <br class="clear" />
   </div>
 </div>
-
+<br><br>
+<div id =test>  <h1><marquee behavior="alternate" direction="">Wish you very very happy birthday baby</marquee></h1></div>
 <div class="wrapper">
   <div id="latest">
     <div class="fl_left"><a href="#"><img style = "height: 300px; "src="images/demo/h1.jpg" alt="" /></a></div>
@@ -39,7 +40,6 @@
     <br class="clear" />
   </div>
 </div>
-
 
 </body>
 </html>
